--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
-* {
+*{
     padding: 0;
     margin: 0;
 }
-
-#game {
+#game{
     width: 400px;
     height: 500px;
     border: 1px solid black;
     margin: auto;
     overflow: hidden;
 }
-
-#block {
+#block{
     width: 50px;
     height: 500px;
     background-color: black;
@@ -19,14 +17,11 @@
     left: 400px;
     animation: block 2s infinite linear;
 }
-
-@keyframes block {
-    0% {left: 400px}
-    100% {left: -50px}
-    
+@keyframes block{
+    0%{left:400px}
+    100%{left:-50px}
 }
-
-#hole {
+#hole{
     width: 50px;
     height: 150px;
     background-color: white;
@@ -36,3 +31,11 @@
     animation: block 2s infinite linear;
 }
 
+#character {
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    position: absolute;
+    top: 100px;
+    border-radius: 50%;
+}
